<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epicodus.whatsinthefridge_android.ui.CreateAccountActivity"
    android:background="@color/colorPrimary" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:id="@+id/linearLayout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/firstNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorTextIcons"
            android:textColor="@color/colorTextIcons"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:hint="@string/first_name_hint"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/lastNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorTextIcons"
            android:textColor="@color/colorTextIcons"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:hint="@string/last_name_hint"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:textColorHint="@color/colorTextIcons"
            android:textColor="@color/colorTextIcons"
            android:textAlignment="center"
            android:layout_marginBottom="32dp" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:textColorHint="@color/colorTextIcons"
            android:textColor="@color/colorTextIcons"
            android:textAlignment="center"
            android:layout_marginBottom="32dp" />

        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textColorHint="@color/colorTextIcons"
            android:textColor="@color/colorTextIcons"
            android:hint="@string/confirm_password_hint"
            android:textAlignment="center"
            android:layout_marginBottom="32dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19dp"
            android:text="@string/registration_button"
            android:textColor="@color/colorTextIcons"
            android:background="@color/colorAccent"
            android:textSize="30sp" />

    </LinearLayout>
</RelativeLayout>
