<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epicodus.whatsinthefridge_android.ui.MainActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:src="@drawable/fridge"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/loginButton"
        android:text="@string/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/colorTextIcons"
        android:textSize="15sp"
        android:layout_alignBaseline="@+id/aboutButton"
        android:layout_alignBottom="@+id/aboutButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_link"
        android:background="@color/colorAccent"
        android:textColor="@color/colorTextIcons"
        android:textColorLink="@color/colorAccent"
        android:textSize="15sp"
        android:layout_marginRight="21dp"
        android:layout_marginEnd="21dp"
        android:layout_alignBaseline="@+id/loginButton"
        android:layout_alignBottom="@+id/loginButton"
        android:layout_toLeftOf="@+id/loginButton"
        android:layout_toStartOf="@+id/loginButton" />

    <Button
        android:id="@+id/aboutButton"
        android:text="@string/about_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/colorTextIcons"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/loginButton"
        android:layout_toEndOf="@+id/loginButton"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp" />

</RelativeLayout>
