<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epicodus.whatsinthefridge_android.ui.LoginActivity"
    android:background="@color/colorPrimary" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorTextIcons"
            android:hint="@string/email_hint"
            android:textAlignment="center"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/passwordText"
            android:padding="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:layout_above="@+id/passwordText"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorTextIcons"
            android:hint="@string/password_hint"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="20sp"
            android:ems="10" />

        <Button
            android:id="@+id/passwordLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/login_button"
            android:background="@color/colorAccent"
            android:layout_marginTop="25dp"
            android:textColor="@color/colorTextIcons"
            android:textSize="20sp" />

    </LinearLayout>
        <TextView
            android:id="@+id/signInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:textColor="@color/colorTextIcons"
            android:textSize="0dp"
            android:textStyle="bold"
            android:layout_above="@+id/linearLayout"
            android:layout_centerHorizontal="true" />

</RelativeLayout>
