<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epicodus.whatsinthefridge_android.ui.Fridge"
    android:background="@color/colorPrimaryLight" >


    <TextView
        android:id="@+id/instructionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredient_instruction"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/ingredient1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingredient"
        android:textAlignment="center"
        android:textColorHint="@color/colorPrimaryText"
        android:layout_marginBottom="27dp"
        android:layout_above="@+id/ingredient2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/ingredient2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingredient"
        android:textAlignment="center"
        android:textColorHint="@color/colorPrimaryText"
        android:layout_above="@+id/ingredient3"
        android:layout_alignLeft="@+id/ingredient3"
        android:layout_alignStart="@+id/ingredient3"
        android:layout_marginBottom="25dp" />

    <EditText
        android:id="@+id/ingredient3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingredient"
        android:textAlignment="center"
        android:textColorHint="@color/colorPrimaryText"
        android:layout_above="@+id/ingredient4"
        android:layout_alignLeft="@+id/ingredient4"
        android:layout_alignStart="@+id/ingredient4"
        android:layout_marginBottom="25dp" />

    <EditText
        android:id="@+id/ingredient4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingredient"
        android:textAlignment="center"
        android:textColorHint="@color/colorPrimaryText"
        android:layout_above="@+id/ingredient5"
        android:layout_alignLeft="@+id/ingredient5"
        android:layout_alignStart="@+id/ingredient5"
        android:layout_marginBottom="30dp" />

    <EditText
        android:id="@+id/ingredient5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingredient"
        android:textAlignment="center"
        android:textColorHint="@color/colorPrimaryText"
        android:layout_above="@+id/searchButton"
        android:layout_alignLeft="@+id/ingredient1"
        android:layout_alignStart="@+id/ingredient1"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:textSize="30sp"
        android:background="@color/colorAccent"
        android:textColor="@color/colorTextIcons"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
